Fix merge errors